FIX: z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,7 @@ h6 {
 
 #edit-word-window-wrapper {
     position: fixed;
+    z-index: 2;
     left: 0;
     top: 0;
     width: 100%;
@@ -89,7 +90,7 @@ h6 {
 #edit-table thead {
     top: 0;
     position: sticky;
-    z-index: 2;
+    z-index: 1;
 }
 
 #edit-table thead th {
